# pdf2txt

./: .gitignore  README.md  pyproject.toml  requirements.txt
pdf2text/: debug.py  main.py
pdf2text/analyzers/: memory_estimator.py  pdf_analyzer.py
pdf2text/core/: agent.py  file_manager.py  memory_manager.py
pdf2text/extractors/: hybrid_extractors.py  ocr_extractors.py  text_extractors.py
pdf2text/output/json_files/: sample_extracted.json
pdf2text/output/text_files/: sample_extracted.txt
pdf2text/utils/: logger.py
tools/: stress_test.py
