[project]
name = "pdf2text-agent"
version = "0.1.0" # Retaining version from original, can be updated
description = "A Python tool to extract text from various PDF types using direct extraction and OCR, with built-in memory management."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "PDF2Text Contributor", email = "contributor@example.com"}
]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
]
dependencies = [
    "psutil>=5.0.0",
    "PyMuPDF>=1.20.0",  # fitz
    "pytesseract>=0.3.0",
    "pdf2image>=1.16.0",
    "Pillow>=9.0.0",
    "numpy>=1.20.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = "."

[project.scripts]
pdf2text-agent = "pdf2text.main:main" # Corrected to main, as main_cli is not in current main.py

[project.urls]
Homepage = "https://github.com/example/pdf2text-agent" # Placeholder
Repository = "https://github.com/example/pdf2text-agent" # Placeholder
